--- a/sass/_color.scss
+++ b/sass/_color.scss
@@ -1,2 +1,6 @@
-$gris: #464646;
-$beige : #d1d1d1;
+$azul:#2A68AA;
+$amarillo: #FDDE12;
+$acento: #0060F1;
+$azul-claro:#EBF0F4;
+$amarillo-claro:#FFF8C7;
+$radius: 1rem;
