--- a/sass/_color.scss
+++ b/sass/_color.scss
@@ -1,6 +1,6 @@
 $azul:#2A68AA;
 $amarillo: #FDDE12;
 $acento: #0060F1;
-$azul-claro:#EBF0F4;
+$azul-claro:#dbe2e8;
 $amarillo-claro:#FFF8C7;
 $radius: 1rem;
