--- a/sass/_componentes.scss
+++ b/sass/_componentes.scss
@@ -100,9 +100,9 @@ nav {
   .sport:hover + ul {
     visibility: visible;
   }
-  
-  .sport{
-    @include cel{
+
+  .sport {
+    @include cel {
     }
   }
   #submenu {
@@ -121,13 +121,13 @@ nav {
       color: #fff;
     }
     @include cel {
-      visibility:visible;
+      visibility: visible;
       display: none;
       opacity: 0;
       position: relative;
       bottom: auto;
-      li{
-        padding: .8rem 1rem;
+      li {
+        padding: 0.8rem 1rem;
       }
     }
   }
@@ -171,6 +171,8 @@ nav {
 
   @if $flecha {
     img {
+      width: 20px;
+      height: auto;
       display: block;
     }
   }
@@ -263,54 +265,81 @@ nav {
   }
 }
 
-@mixin contenedor ($amarillo){
+@mixin contenedor($amarillo) {
   margin: $margen-alto 0;
   overflow: hidden;
-display: flex;
-border-radius: $radius;
-p{
-  padding: 1.5rem 0 1rem;
-}
-.izq{
-  flex: 1 0 50%;
-}
-.der{
-  flex: 1 0 50%;
-  display: inherit;
-  justify-content: center;
-  align-items: center;
-  .bandeja{
-    width: 70%;
+  display: flex;
+  border-radius: $radius;
+  p {
+    padding: 1.5rem 0 1rem;
+  }
+  .izq {
+    flex: 1 0 50%;
+  }
+  .der {
+    flex: 1 0 50%;
+    display: inherit;
+    justify-content: center;
+    align-items: center;
+    .bandeja {
+      width: 70%;
+    }
+  }
+  @if $amarillo {
+    background: $amarillo-claro;
+  } @else {
+    background: $azul-claro;
+  }
+  @include cel {
+    flex-wrap: wrap;
+    .izq,
+    .der {
+      flex: 1 0 100%;
+    }
+    .bandeja {
+      margin: $margen-alto 0;
+    }
   }
 }
-@if $amarillo {
-  background: $amarillo-claro;
-}@else {
-  background: $azul-claro;
+.contenedordoble {
+  @include contenedor($amarillo: false);
 }
-@include cel{
-  flex-wrap: wrap;
-  .izq, .der{
-    flex: 1 0 100%;
-  }
-  .bandeja{
-    margin: $margen-alto 0;
-  }
-}
-}
-.contenedordoble{
-@include contenedor($amarillo: false);
-}
-.contenedordoble-amarillo{
-@include contenedor($amarillo: false);
+.contenedordoble-amarillo {
+  @include contenedor($amarillo: false);
 }
 
-.section-header{
+.section-header {
   text-align: center;
   margin-bottom: $margen-alto;
-  p{
+  p {
     color: $azul;
     padding: 1rem 20%;
   }
 }
 
+#productos {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+.card-main {
+  flex: 1 0 30%;
+  .conte-img {
+    position: relative;
+    img {
+      width: 100%;
+      height: auto;
+    }
+    .logo {
+      display: flex;
+      align-items: center;
+      position: absolute;
+      padding: .5rem;
+      background: $amarillo-claro;
+      width: 30%;
+      aspect-ratio: 2/1.3;
+      right: 0;
+      bottom: 0;
+    }
+  }
+}
