--- a/style.scss
+++ b/style.scss
@@ -18,6 +18,9 @@ a{
 h1{
   font-size: clamp(3rem, 4vw, 8rem);
 }
+h2{
+  font-size: clamp(2rem, 2vw, 4rem);
+}
 h1, h2, h3{
   font-family: Raleway;
   color: $acento;
@@ -35,4 +38,5 @@ h1, h2, h3{
     width: min(100% - 2rem, 100rem);
   }
 }
+
 
