--- a/sass/_componentes.scss
+++ b/sass/_componentes.scss
@@ -326,9 +326,12 @@ nav {
   flex: 1 0 30%;
   .conte-img {
     position: relative;
+    aspect-ratio: 1/1.2;
+    overflow: hidden;
+    border-radius:$radius;
     img {
+      object-fit: cover;
       width: 100%;
-      height: auto;
     }
     .logo {
       display: flex;
@@ -336,10 +339,22 @@ nav {
       position: absolute;
       padding: .5rem;
       background: $amarillo-claro;
-      width: 30%;
+      height: 15%;
       aspect-ratio: 2/1.3;
       right: 0;
       bottom: 0;
+      img{
+        object-fit: contain;
+        height: 100%;
+      }
     }
+  }
+  h3{
+    font-weight: bold;
+    font-size: clamp(1.2rem, 1.5vw, 2rem);
+    padding-top: 1rem;
+  }
+  p{
+    margin: 1rem 0 .5rem ;
   }
 }
