--- a/sass/_componentes.scss
+++ b/sass/_componentes.scss
@@ -186,6 +186,14 @@ nav {
   // @include boton($flecha:true);
   @include boton($flecha: true);
 }
+.btnFlechaVacio {
+  // @include boton($flecha:true);
+  @include boton($flecha: true);
+  padding: 0.5rem 1rem;
+  img {
+    margin-right: 0 !important;
+  }
+}
 #hero {
   display: flex;
   flex-wrap: wrap;
@@ -325,14 +333,14 @@ nav {
 }
 .card-main {
   flex: 0 1 30%;
-  @include cel{
+  @include cel {
     flex: 0 1 100%;
   }
   .conte-img {
     position: relative;
     aspect-ratio: 1/1.2;
     overflow: hidden;
-    border-radius:$radius;
+    border-radius: $radius;
     img {
       object-fit: cover;
       width: 100%;
@@ -341,33 +349,112 @@ nav {
       display: flex;
       align-items: center;
       position: absolute;
-      padding: .5rem;
+      padding: 0.5rem;
       background: $amarillo-claro;
       height: 15%;
       aspect-ratio: 2/1.3;
       right: 0;
       bottom: 0;
-      img{
+      img {
         object-fit: contain;
         height: 100%;
       }
     }
   }
-  h3{
+  h3 {
     font-weight: bold;
     font-size: clamp(1.2rem, 1.5vw, 2rem);
     padding-top: 1rem;
   }
-  p{
-    margin: 1rem 0 .5rem ;
+  p {
+    margin: 1rem 0 0.5rem;
   }
 }
 
-.card-mini{
-  flex: 0 1 23%!important;
+.card-mini {
+  flex: 0 1 23% !important;
   margin-top: 2rem;
-  @include cel{
-    flex: 0 1 100%!important;
+  @include cel {
+    flex: 0 1 100% !important;
     margin-top: 0rem;
   }
 }
+
+#sport {
+  border-top: solid 1px $acento;
+  border-bottom: solid 1px $acento;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  width: 80%;
+  padding: 2rem 0;
+  margin-top:$margen-alto;
+  margin-bottom:$margen-alto;
+  @include cel{
+    grid-template-columns: 1fr;
+    width:90%;
+    .cuadro, .cuadroIntro{
+      height: 30vh;
+    }
+  }
+  h2{
+    font-size: clamp(1.2rem, 1.8vw, 2.3rem);
+    text-shadow: 2px 2px 8px $azul-claro;
+    @include cel{
+      text-shadow: 1px 1px 12px $azul;
+      color: #fff;
+      font-size: 1.5rem;
+    }
+  }
+
+  .cuadroIntro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .bandeja {
+      width: 60%;
+      @include cel{
+        width: 80%;
+      }
+    }
+  }
+  .cuadro {
+    position: relative;
+    border-radius: $radius;
+    overflow: hidden;
+    img{
+      object-fit: cover;
+      height: 100%;
+    }
+    .cover {
+      width: 100%;
+    }
+    .bandeja {
+      position: absolute;
+      bottom: 10%;
+      left: 10%;
+    
+    }
+  }
+}
+
+
+// borrar
+.mySwiper{
+  // padding-left: 10%!important;
+
+}
+
+.swiper-slide {
+  background: rgb(128, 127, 127);
+  flex: 1 0 30%;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
