--- a/style.scss
+++ b/style.scss
@@ -3,7 +3,8 @@
 // fuentes
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700;900&display=swap');
 
-
+// importar estilo de glide 
+@import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
 
 body {
   font-family: Montserrat;
