--- a/sass/_componentes.scss
+++ b/sass/_componentes.scss
@@ -79,6 +79,7 @@ nav {
   width: 100%;
   z-index: 900;
   position: relative;
+  
   .logo {
     width: clamp(9rem, 15vw, 12rem);
     padding: 1em;
@@ -135,7 +136,8 @@ nav {
   @include cel {
     flex-wrap: wrap;
     align-items: flex-start;
-    height: auto;
+    margin-bottom: 2rem;
+    // height: auto!important;
     .logo {
       align-self: flex-start;
     }
@@ -327,6 +329,9 @@ nav {
   p {
     color: $azul;
     padding: 1rem 20%;
+    @include cel{
+      padding: 1rem 10%;
+    }
   }
 }
 
