--- a/sass/_componentes.scss
+++ b/sass/_componentes.scss
@@ -341,6 +341,17 @@ nav {
   gap: 1rem;
   justify-content: space-evenly;
 }
+.cardSlider-extras{
+background: $azul-claro;
+    grid-auto-columns: 96%!important;
+
+  img{
+    cursor: url("assets/cursor-hand-open.png"), grab;
+    @include cel{
+      scroll-snap-align: start;
+    }
+  }
+}
 .card-main {
   flex: 0 1 30%;
   @include cel {
@@ -358,16 +369,15 @@ nav {
     .slider{
       display: grid;
       grid-auto-flow: column;
-      grid-auto-columns: 95%;
+      grid-auto-columns: 102%;
       overflow-x: auto;
       overscroll-behavior-inline: contain;
       scroll-snap-type: inline mandatory;
-      img{
-        cursor: grab;
-        // @include cel{
-        //   scroll-snap-align: center;
-        // }
-      }
+      // img{
+      //   @include cel{
+      //     scroll-snap-align: start;
+      //   }
+      // }
     }
     .logo {
       display: flex;
@@ -483,6 +493,7 @@ nav {
       aspect-ratio: 6/7;
       object-fit: cover;
       flex: 1 0 100%;
+      cursor: url("assets/cursor-hand-open.png"), grab;
     }
     .bandeja {
       h3 {
