--- a/sass/_componentes.scss
+++ b/sass/_componentes.scss
@@ -350,26 +350,36 @@ nav {
     @include cel {
       scroll-snap-align: start;
     }
-    &:last-child{
+    &:last-child {
       object-fit: contain !important;
       background: $azul-claro;
     }
   }
-
+}
+.muestrate_btn{
+  // aparece el boton en las cartas 
+  .card_derecha{
+    display: block!important;
+  }
 }
 // animaciones disparadas de js
-.alhover{
+.alhover {
   transform: translateX(-20%);
-  // animation: cardhover 1.2s ease forwards;
 }
-// .aldeshover{
-//   transform: translateX(0%);
-//   // animation: cardhoverSalida 1.2s ease backwards;
-// }
+
 .card-main {
   flex: 0 1 30%;
+  position: relative;
   @include cel {
     flex: 0 1 100%;
+  }
+  .card_derecha {
+    // soy el boton en las cartas con carrusel
+    position: absolute;
+    right: 20px;
+    top:0px;
+    z-index: 200;
+    display: none;
   }
   .conte-img {
     position: relative;
@@ -379,6 +389,7 @@ nav {
     overflow-x: auto;
     overscroll-behavior-inline: contain;
     scroll-snap-type: inline mandatory;
+    scroll-behavior: smooth;
     &::-webkit-scrollbar {
       display: none;
     }
@@ -394,6 +405,7 @@ nav {
       display: grid;
       grid-auto-flow: column;
       grid-auto-columns: 102%;
+      
       // img{
       //   @include cel{
       //     scroll-snap-align: start;
