acabando el home

--- a/sass/_componentes.scss
+++ b/sass/_componentes.scss
@@ -204,7 +204,7 @@ nav {
 #hero {
   display: flex;
   flex-wrap: wrap;
-  background: url("assets/monatana-fiesch-volken.png") no-repeat;
+  background: url("assets/monatana-fiesch-volken.webp") no-repeat;
   background-size: 65%;
   background-position: 110% top;
   min-height: 70vh;
