--- a/sass/_componentes.scss
+++ b/sass/_componentes.scss
@@ -98,16 +98,13 @@ nav {
     }
   }
 
-  .sport:hover + ul {
-    visibility: visible;
-  }
-
   .sport {
     @include cel {
     }
   }
   #submenu {
     visibility: hidden;
+    opacity: 0;
     position: absolute;
     width: 100%;
     right: 0;
@@ -117,7 +114,6 @@ nav {
     border-radius: $radius;
     display: flex;
     flex-wrap: wrap;
-    @extend .anima;
     a {
       color: #fff;
     }
@@ -280,6 +276,85 @@ nav {
   }
 }
 
+#hero-int {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  flex-wrap: wrap;
+  min-height: 70vh;
+  margin-bottom: $margen-alto;
+  align-items: center;
+  padding: 0 2rem;
+  
+  @include cel{
+    padding: 0 0rem;
+    margin-bottom: 2rem;
+  }
+
+  .izq {
+    display: flex;
+    z-index: 100;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    grid-column: 1 / span 2;
+    grid-row: 1;
+    border-radius: $radius;
+    padding: 3rem 0;
+    min-height: 70%;
+    box-shadow: 1px 6px 15px -2px rgba(142, 172, 216, 0.73);
+    .bandeja {
+      width: 75%;
+      p {
+        color: $acento;
+        padding: 1rem 0;
+        span {
+          color: #999;
+          font-weight: bold;
+        }
+      }
+    }
+    @include cel {
+      grid-column: 1 / -1;
+      grid-row: auto;
+      order: 2;
+      .bandeja {
+        width: 85%;
+      }
+    }
+  }
+  .der {
+    align-items: center;
+    justify-content: center;
+    grid-column: 2 / -1;
+    grid-row: 1;
+    img {
+      width: 100%;
+      object-fit: cover;
+      border-radius: $radius;
+    }
+    @include cel{
+      grid-column: 1 / -1;
+      grid-row: auto;
+      order: 1;
+    }
+  }
+  .logos {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    li {
+      padding: 0 0.2rem;
+      margin-top: 0.7rem;
+      flex: 0 1 15%;
+      @include cel {
+        flex: 0 1 25%;
+        padding: 0 0.5rem;
+      }
+    }
+  }
+}
+
 @mixin contenedor($amarillo) {
   margin: $margen-alto 0;
   overflow: hidden;
@@ -287,6 +362,11 @@ nav {
   border-radius: $radius;
   p {
     padding: 1.5rem 0 1rem;
+  }
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
   .izq {
     flex: 1 0 50%;
@@ -320,7 +400,7 @@ nav {
   @include contenedor($amarillo: false);
 }
 .contenedordoble-amarillo {
-  @include contenedor($amarillo: false);
+  @include contenedor($amarillo: true);
 }
 
 .section-header {
@@ -356,10 +436,10 @@ nav {
     }
   }
 }
-.muestrate_btn{
-  // aparece el boton en las cartas 
-  .card_derecha{
-    display: block!important;
+.muestrate_btn {
+  // aparece el boton en las cartas
+  .card_derecha {
+    display: block !important;
   }
 }
 // animaciones disparadas de js
@@ -367,6 +447,12 @@ nav {
   transform: translateX(-20%);
 }
 
+.card-menor {
+  flex: 0 1 23% !important;
+  @include cel {
+    flex: 0 1 100% !important;
+  }
+}
 .card-main {
   flex: 0 1 30%;
   position: relative;
@@ -377,7 +463,7 @@ nav {
     // soy el boton en las cartas con carrusel
     position: absolute;
     right: 20px;
-    top:0px;
+    top: 0px;
     z-index: 200;
     display: none;
   }
@@ -399,13 +485,15 @@ nav {
     }
     img {
       object-fit: cover;
+      aspect-ratio: 6/7.2;
       width: 100%;
+      height: 100%;
     }
     .slider {
       display: grid;
       grid-auto-flow: column;
       grid-auto-columns: 102%;
-      
+
       // img{
       //   @include cel{
       //     scroll-snap-align: start;
