--- a/sass/_componentes.scss
+++ b/sass/_componentes.scss
@@ -284,8 +284,8 @@ nav {
   margin-bottom: $margen-alto;
   align-items: center;
   padding: 0 2rem;
-  
-  @include cel{
+
+  @include cel {
     padding: 0 0rem;
     margin-bottom: 2rem;
   }
@@ -332,7 +332,7 @@ nav {
       object-fit: cover;
       border-radius: $radius;
     }
-    @include cel{
+    @include cel {
       grid-column: 1 / -1;
       grid-row: auto;
       order: 1;
@@ -355,6 +355,62 @@ nav {
   }
 }
 
+#hero-team {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  flex-wrap: wrap;
+  min-height: 70vh;
+  margin-bottom: $margen-alto;
+  align-items: center;
+  padding: 0 2rem;
+  gap: 2rem;
+
+  @include cel {
+    padding: 0 0rem;
+    margin-bottom: 2rem;
+  }
+
+  .izq {
+    display: flex;
+    z-index: 100;
+    justify-content: center;
+    align-items: center;
+    grid-column: 1 / span 2;
+    grid-row: 1;
+    padding: 3rem 0;
+    min-height: 70%;
+    .bandeja {
+      p {
+        color: $acento;
+        padding: 1rem 0;
+      }
+    }
+    @include cel {
+      grid-column: 1 / -1;
+      grid-row: auto;
+      text-align: center;
+      padding: 0rem 0;
+      min-height: 0%;
+    }
+  }
+  .der {
+    align-items: center;
+    justify-content: center;
+    grid-column: 3 / -1;
+    grid-row: 1;
+    img {
+      width: 100%;
+      aspect-ratio: 3/2.3;
+      object-fit: cover;
+      border-radius: $radius;
+    }
+    @include cel {
+      grid-column: 1 / -1;
+      grid-row: auto;
+    }
+  }
+}
+
 @mixin contenedor($amarillo) {
   margin: $margen-alto 0;
   overflow: hidden;
@@ -367,6 +423,8 @@ nav {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: $radius;
+    box-shadow: 1px 6px 15px -2px rgba(142, 172, 216, 0.73);
   }
   .izq {
     flex: 1 0 50%;
@@ -684,5 +742,59 @@ footer {
         }
       }
     }
+  }
+}
+
+#team{
+  position: relative;
+  background: $azul;
+  color: #fff;
+  min-height: 100vh;
+  padding: 10% 0;
+  display: flex;
+  align-items: center;
+  transform: translateY(-15%);
+  @include cel{
+    transform: translateY(-10%);
+    padding: 35% 0;
+  }
+  z-index: -1;
+  h2, h3{
+    color: #fff;
+  }
+  p{
+    max-width: 60%;
+    padding: .5rem 0 3rem;
+    @include cel{
+      max-width: 100%;
+    }
+  }
+  #members{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: space-around;
+    h3{
+      font-size: clamp(1.2rem, 1.8vw, 3rem);
+      padding: 1rem 0 .3rem;
+    }
+  }
+  .member{
+    flex: 0 1 18%;
+    margin-bottom: 2rem;
+    @include cel{
+      flex: 0 1 40%;
+    }
+    img{
+      aspect-ratio: 5/5.2;
+      object-fit: cover;
+      border-radius: $radius;
+    }
+  }
+}
+#history{
+  margin-top: -23%;
+  @include cel{
+    margin-top: -80%;
   }
 }
