--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -5,6 +5,7 @@ html {
   background: #fff;
   background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgb(227, 235, 241) 100%);
   background-repeat: no-repeat;
+  scroll-behavior: smooth;
 }
 
 *,
